# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-iri"
description = "Native, zero-dependency IRI/URI value space (RFC-3987 IRI + RFC-3986 URI parse/validate, reference resolution, syntax normalization, CURIE/prefix expansion) for the RDF 1.2 query stack — replaces oxiri"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-iri"
rust-version.workspace = true
readme = "README.md"
keywords = ["iri", "uri", "rfc3987", "rdf", "curie"]
categories = ["parser-implementations", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only, ZERO runtime dependencies: this crate is a leaf foundation. It must
# stay wasm-clean and must not pull any oxigraph-family crate (it replaces
# `oxiri`). It does NOT depend on `purrdf-core` — the dependency points the
# other way, later.
crate-type = ["rlib"]
path = "src/lib.rs"
name = "purrdf_iri"

[dev-dependencies]
# Colored line-diffs on assert_eq! failure (repo convention). Drop-in per test file.
pretty_assertions = { workspace = true }
# Round-trip / idempotency property tests (parse -> serialize, normalize twice).
proptest = { workspace = true }
# Parse hot-path baselines. DEV-DEPENDENCY ONLY: the zero-dep leaf gate checks
# `cargo tree --edges normal`, which excludes dev-deps, so criterion here does not
# breach the crate's zero-runtime-dependency contract.
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
