# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf"
description = "PurRDF umbrella crate: RDF 1.2 implementation, slices, and SHACL shape validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "rdf-12", "shacl", "sparql", "knowledge-graph"]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
purrdf-rdf = { workspace = true }
purrdf-slice = { workspace = true }
purrdf-shapes = { workspace = true }
