# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-core"
description = "PurRDF RDF 1.2 oxigraph-free kernel: model, diagnostics, IR, store traits, and event ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-core"
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "rdf-12", "ir", "diagnostics", "linked-data"]
categories = ["parser-implementations", "encoding", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only oxigraph-free / PyO3-free kernel. Python bindings live under
# `bindings/python`; this crate is the ring-fenced core that MUST NOT pull
# oxigraph or PyO3 into its dependency tree.
crate-type = ["rlib"]
path = "src/lib.rs"
name = "purrdf_core"

[dependencies]
# The permissive RDF 1.2 ingestion protocol: this crate provides
# the `DatasetSink` adapter that folds an `RdfEventSink` event stream into a frozen
# `RdfDataset`, plus the frozen-IR-replay `FrozenDatasetSource`. The protocol crate
# is dependency-free and uses the same `MIT OR Apache-2.0` license as this crate.
purrdf-events = { workspace = true }
# Fixed-key, non-cryptographic hashing for in-memory IR lookup tables. The tables
# never persist hash values and equality still resolves collisions; this replaces
# SipHash on hot value-index paths without introducing runtime randomness.
ahash = { workspace = true }
# Raw `HashTable` for the store-once builder interner/dedup: each term/
# row is owned ONCE by its `Vec`, the table holds only indices. (`HashTable` was
# introduced in hashbrown 0.14.2; the workspace tracks 0.15.)
hashbrown = { workspace = true }
# Tab-separated body parser for the native SSSOM codec: handles quoting,
# flexible column counts, and by-name column access. The SSSOM `#`-prefixed YAML
# header is parsed bespoke (PURRDF owns the format); `csv` only parses the body.
csv = { workspace = true }
# Content-addressed blob digest for the content store. Same version as the
# sibling kernel crates (logic/validate/slice). Default features (std) re-enabled;
# the workspace-level entry is default-features = false for the wasm-clean eval path.
sha2 = { workspace = true, default-features = true }
# Inline small-vector primitive shared workspace-wide (`crate::small`): the
# generic `IdVec` and re-exported `SmallVec`/`smallvec!`. Default features only
# (no `union`/`serde`) — wasm-clean, `unsafe`-free.
smallvec = { workspace = true }

[dev-dependencies]
# Rich colored line-diffs on assert_eq! failure. Drop-in: a shadowing
# `use pretty_assertions::assert_eq;` per test file; identical on pass.
pretty_assertions = { workspace = true }
proptest = { workspace = true }
# Acceleration-program baselines; light feature set matching
# the sibling crates (logic/shacl/validate): criterion's plotters/rayon defaults are
# off so `make bench` builds fast and the cargo-bench stdout summary is all we need.
criterion = { workspace = true }
# DEV-ONLY, native-only: demonstrates the G5 external-consumer mmap seam
# (docs/design/purrdf-backend-contract.md) in
# `tests/pack_mmap.rs` — a memory-mapped pack file handed to
# `PackView::from_bytes` as a borrowed slice. Never a runtime dependency of
# this crate; excluded from the wasm32 build by the test file's
# `#![cfg(not(target_arch = "wasm32"))]` gate.
memmap2 = { workspace = true }
# Writes the built pack bytes to a real temp file for `pack_mmap.rs` to mmap.
tempfile = { workspace = true }

[[bench]]
# IR layout / operational-metrics harness: AoS-vs-SoA(-vs-predicate-adjacency)
# iteration + allocated-bytes/count/peak reporting. Satisfies the RFC gate
# "Layout is chosen by benchmark, not asserted". `make bench` lane only — excluded
# from `make check`.
name = "ir_layout"
harness = false

[[bench]]
# COW `MutableDataset` measured-hypothesis harness: the shipped copy-on-
# write suppression-delta dataset benched head-to-head against a simple hash-indexed
# value-quad store, on a build/mutate/query workload. Reports both; asserts no winner.
# `make bench` lane only — excluded from `make check`.
name = "mutable"
harness = false

[[bench]]
# Succinct `pack` primitives (Task 1 of the succinct-pack-codec feature):
# `IntVector::get` and `RankSelect`'s `rank1`/`select1`, each at a few sizes.
# Report-only — no timing/speedup assertions. `make bench` lane only — excluded
# from `make check`.
name = "pack_bits"
harness = false

[[bench]]
# Intern-time content-id overhead harness: three groups measuring
# ordinary-IRI interning with content addressing inactive vs active (prefix-miss
# cost) and genuine `blake3:<64hex>` content-id interning (prefix-hit + decode +
# side-table insert). Report-only — no timing/speedup assertions. `make bench`
# lane only — excluded from `make check`.
name = "intern_content_id"
harness = false

[[bench]]
# Succinct `pack` codec end-to-end harness (Task 10 of the succinct-pack-codec
# feature): `PackBuilder::build_bytes` (encode), `PackView::from_bytes` (open),
# `quads_for_pattern` over a `PackView` for subject/predicate/object-bound and
# full-scan shapes, and `verify_pack` (the certified-projection RDFC-1.0
# recompute). Report-only — no timing/speedup assertions. `make bench` lane
# only — excluded from `make check`.
name = "pack_query"
harness = false
