# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-wasm"
description = "purrdf: a wasm32, in-memory RDF 1.2 engine with an idiomatic RDF/JS (DataFactory/Dataset/Stream) API"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["rdf", "rdf-12", "wasm", "rdfjs", "purrdf"]

[lib]
# cdylib for the wasm-bindgen build (the shipped npm/ESM artifact); rlib so the
# inner mapping logic still compiles + unit-tests on the native workspace gate
# (`cargo nextest` / clippy --all-targets). The `#[wasm_bindgen]` shims compile on
# native too; the real wasm + JS surface is exercised by the Node round-trip lane
# (`crates/rdf-wasm/js/tests`, run against the wasm-bindgen output).
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# The wasm-clean engine: the GTS-feature build of purrdf excludes oxigraph
# and PyO3, and parses/serializes RDF text + RDF/XML through the first-party native
# codecs (crates/rdf/src/native_codecs/, roxmltree-backed) — no purrdf-gts codec, no
# Store, no RocksDB, no rayon.
purrdf = { path = "../rdf", version = "0.1.0" }
# The permissive zero-dep RDF 1.2 ingestion protocol (purrdf P6 #840): the seam
# the RDF/JS Sink maps onto.
purrdf-events = { path = "../rdf-events", version = "0.1.0" }
# The IR kernel + `SparqlEngine` seam (SparqlRequest / SparqlResult), in interned
# TermId space.
purrdf-core = { path = "../rdf-core", version = "0.1.0" }
# The native, oxigraph-free multiset SPARQL evaluator that powers the offline
# in-browser `Dataset.query`. SERVICE federation is host-injected through
# `RemoteQuerySource`; this crate does not bake in an HTTP client.
purrdf-sparql-eval = { path = "../sparql-eval", version = "0.1.0" }
# Serializes the SELECT/ASK result model to W3C SPARQL Results JSON. wasm-clean leaf
# (replaces the oxigraph-family `sparesults`).
purrdf-sparql-results = { path = "../sparql-results", version = "0.1.0" }
# EXACT pin: the `wasm-bindgen` CLI that generates the JS bindings must match the
# library version byte-for-byte or it refuses to run. `make wasm-pkg` and the CI
# Node lane install `wasm-bindgen-cli@0.2.125` to match this.
wasm-bindgen = "=0.2.125"

[dev-dependencies]
pretty_assertions = "1"
