# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-rdf"
description = "PurRDF RDF 1.2 implementation: PyO3-free model, diagnostics, store traits, and native GTS/text-codec adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-rdf"
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "rdf-12", "gts", "knowledge-graph", "diagnostics"]
categories = ["parser-implementations", "encoding", "data-structures"]
exclude = ["tests/corpus/w3c/**"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only: Python bindings live in `bindings/python`, so this crate stays
# PyO3-free and wasm-clean.
name = "purrdf_rdf"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# The ring-fenced, oxigraph-free kernel: owns the IR, value
# model, diagnostics, store traits, loss ledger, provenance, FnO/SSSOM codecs,
# the content store, and the oxigraph-free GTS reader path. Non-optional:
# purrdf always re-exports its shipped modules.
purrdf-core = { workspace = true }
# The native, zero-dependency XSD value space: non-optional, so purrdf's
# always-on native codec path can reach W3C-canonical literal canonicalization
# without any feature gate (carrier-purity — `.goals` forbids optional
# components).
purrdf-xsd = { workspace = true }
# JSON / YAML surface for the first-party JSON-LD-star / YAML-LD-star codec
# (`native_codecs::jsonld`). Already in the validate + pipeline trees, so
# this adds no new tree-wide dependency.
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
ciborium = { workspace = true }
# Store-once interning on the native text-codec hot path (fixed-key hashing +
# raw hash table indices into the owned term Vec), matching the purrdf-core
# `ir::builder` pattern.
ahash = { workspace = true }
hashbrown = { workspace = true }
purrdf-gts = { workspace = true }
purrdf-events = { workspace = true }
# The snapshot signing path constructs a SigningKey from 32 raw Ed25519 bytes;
# same major as purrdf-gts links.
ed25519-dalek = { workspace = true }
# The native SPARQL evaluator — now the SOLE SPARQL authority
# (oxigraph removed). It is the engine the maintainer-only golden-capture
# binary (`src/bin/capture_sparql_goldens.rs`) runs to freeze the conformance
# goldens (native-vs-native regression gate).
purrdf-sparql-eval = { workspace = true }
# The wasm-clean SPARQL front-end: its `lexer` is the proven, UCHAR-decoding
# RDF term tokenizer the first-party N-Triples/N-Quads/Turtle/TriG parser reuses
# NO oxigraph-family edge (only purrdf-iri + purrdf-xsd) — gated by
# `make rdf-core-hygiene`.
purrdf-sparql-algebra = { workspace = true }
# The zero-dependency IRI/position leaf: its `LineIndex` primitive resolves a
# byte offset to a 1-based line/column on the diagnostic path (Turtle/TriG source
# tracing). Already present transitively via sparql-algebra, so this adds no new
# tree-wide dependency and stays wasm-clean.
purrdf-iri = { workspace = true }
# The XML DOM front-end for the FIRST-PARTY RDF/XML codec: supplies a
# namespace-resolved, document-order element tree, on top of which `native_codecs::
# rdfxml` implements the W3C RDF/XML grammar in-repo (replacing the external
# `purrdf_gts::rdf_codecs::{from_rdf_xml, to_rdf_xml}`). Pure-Rust, NO oxigraph-family
# edge (the same crate `crates/music` already vendors). Rides the always-on `gts`
# shipped with the rest of the native codecs.
roxmltree = { workspace = true }
# Chunk-parallel N-Triples / N-Quads line parsing (phase 1 of the two-phase parse in
# `native_codecs::text_parse`): tokenize+parse per line-aligned chunk in parallel,
# then intern sequentially in document order (byte-identical output). Unconditional —
# rayon compiles cleanly on wasm32-unknown-unknown and degrades to inline-sequential
# execution there (same pattern as purrdf-slice's catalog scan).
rayon = { workspace = true }
# SIMD-accelerated byte scanning on the native codec hot paths (chunk-parallel
# newline splitting; serializer escape fast-path classification). SIMD on
# x86/aarch64, portable SWAR fallback elsewhere — wasm-clean, no feature gate.
memchr = { workspace = true }

# Maintainer-only golden-capture binary. Freezes the native
# SPARQL engine over the corpus as committed goldens under
# crates/sparql-conformance/tests/goldens/. Rides the always-on `gts` feature.
[[bin]]
name = "capture_sparql_goldens"
path = "src/bin/capture_sparql_goldens.rs"

[dev-dependencies]
# Rich colored line-diffs on assert_eq! failure. Drop-in: a shadowing
# `use pretty_assertions::assert_eq;` per test file; identical on pass.
pretty_assertions = { workspace = true }
ciborium = { workspace = true }
purrdf-gts = { workspace = true }
proptest = { workspace = true }
# Acceleration-program baselines; light feature set matching
# the sibling crates (logic/shacl/validate): criterion's plotters/rayon defaults are
# off so `make bench` builds fast and the cargo-bench stdout summary is all we need.
criterion = { workspace = true }

[[bench]]
# Native RDF text codec hot paths: N-Quads parse into frozen IR and serialize back
# out through the first-party serializer. Report-only; excluded from check.
name = "native_codecs"
harness = false
