# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-shapes"
description = "PurRDF SHACL validation engine core: native RDF 1.2 SHACL Core validator, gated against the SHACL conformance corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "shacl", "validation", "knowledge-graph", "rdf-12"]

[lints]
workspace = true

[lib]
# rlib-only: Python bindings live in `bindings/python`, so this crate stays
# PyO3-free and wasm-clean.
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# Native SPARQL parser (purrdf S5, #911). Used at shape-load to reject non-SELECT
# SHACL-SPARQL queries (ASK/CONSTRUCT/DESCRIBE) — they parse but cannot bind ?this
# and would panic at eval. Use SparqlParser to parse and match Query::Select.
# Replaces the oxigraph-family SPARQL parser.
purrdf-sparql-algebra = { workspace = true }
# Native SPARQL engine (crates/sparql-eval): the single SparqlEngine impl over the
# frozen IR. Replaces oxigraph's SPARQL 1.1 engine for SHACL-AF sh:sparql /
# sh:SPARQLTarget evaluation (EPIC #906).
purrdf-sparql-eval = { workspace = true }
# sh:pattern regex constraint.
regex = { workspace = true }
# XSD value-space machinery: temporal (xsd:dateTime/date/time) value comparison
# for the sh:minInclusive / sh:maxInclusive / sh:minExclusive / sh:maxExclusive
# facets (W3C core/node/minInclusive-002/-003 — timezone-aware partial order;
# indeterminate comparisons are violations).
purrdf-xsd = { workspace = true }
# JSON Schema / OpenAPI emitter (#700). NO `preserve_order` feature: we rely on
# serde_json's default BTreeMap-backed Map so object keys serialize sorted for
# deterministic, byte-stable output.
serde_json = { workspace = true }
# Shared PyO3-free RDF 1.2 kernel and native GTS/text-codec boundary (#648).
# NOT workspace-inherited: renamed deps (`package = ...`) cannot be expressed
# at an inheriting use site, and the workspace key `purrdf` is the umbrella.
purrdf = { package = "purrdf-rdf", path = "../rdf", version = "0.2.1" }
# Inline small-vector primitive for hot, short-lived id rows (default features
# only — no `union`/`serde`; wasm-clean, `unsafe`-free). Version is pinned once
# in the root `[workspace.dependencies]`.
smallvec = { workspace = true }

[dev-dependencies]
purrdf-gts = { workspace = true }
purrdf-slice = { workspace = true }
proptest = { workspace = true }
# Acceleration-program baselines (#630, Phase 0); light feature set, see crates/logic.
criterion = { workspace = true }

[[bench]]
name = "validate"
harness = false

[[bench]]
name = "pattern_lookup"
harness = false
